--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>fr.u-paris.gla</groupId>
 	<artifactId>project</artifactId>
-	<version>2024.1.0.0-SNAPSHOT</version>
+	<version>2024.1.0.0-SNAPSHOT-parser</version>
 
 	<name>Project Base</name>
 
@@ -49,6 +49,26 @@
 						</manifest>
 					</archive>
 				</configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-shade-plugin</artifactId>
+			    <version>3.3.0</version>
+			    <executions>
+			        <execution>
+			            <phase>package</phase>
+			            <goals>
+			                <goal>shade</goal>
+			            </goals>
+			            <configuration>
+			                <transformers>
+			                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+			                        <mainClass>fr.u_paris.gla.project.App</mainClass>
+			                    </transformer>
+			                </transformers>
+			            </configuration>
+			        </execution>
+			    </executions>
 			</plugin>
 		</plugins>
 		<resources>
