--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
 		</plugins>
 		<resources>
 			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+			<resource>
 				<directory>src/main/resources-filtered</directory>
 				<filtering>true</filtering>
 			</resource>
