--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,24 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
 
+	<repositories>
+    <repository>
+      <id>josm</id>
+      <url>https://josm.openstreetmap.de/nexus/content/repositories/releases/
+      </url>
+    </repository>
+  </repositories>
+
 	<dependencies>
+		<!-- JMapViewer pour afficher OpenStreetMap -->
+    <dependency>
+      <groupId>org.openstreetmap.jmapviewer</groupId>
+      <artifactId>jmapviewer</artifactId>
+      <version>2.4</version>  <!-- Check for the latest version -->
+    </dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
@@ -33,23 +48,43 @@
 			<artifactId>json</artifactId>
 			<version>20230618</version>
 		</dependency>
+		 
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.3.0</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<mainClass>fr.u_paris.gla.project.App</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
+		<plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+          <mainClass>fr.u_paris.gla.project.App</mainClass> <!-- Replace with your main class -->
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>fr.u_paris.gla.project.App</mainClass> <!-- Replace with your main class -->
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 		</plugins>
 		<resources>
 			<resource>
