--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,16 @@
           </execution>
         </executions>
       </plugin>
+	   <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>zip</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
+                </configuration>
+        </plugin>
 		</plugins>
 		<resources>
 			<resource>
