Package info documentation

--- a/pom.xml
+++ b/pom.xml
@@ -86,31 +86,6 @@
           <mainClass>fr.u_paris.gla.project.App</mainClass>
         </configuration>
       </plugin>
-<!--     Inutile, à supprimer 
-			 <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.5.0</version>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <archive>
-            <manifest>
-              <mainClass>fr.u_paris.gla.project.App</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin> -->
 	   <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -121,7 +96,7 @@
                     </nonFilteredFileExtensions>
                 </configuration>
         </plugin>
-<!--      <plugin>
+	      <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>3.4.1</version>
@@ -132,7 +107,7 @@
                     </goals>
                 </execution>
             </executions>
-        </plugin> -->
+        </plugin>
 		</plugins>
 		<resources>
 			<resource>
