--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                     </nonFilteredFileExtensions>
                 </configuration>
         </plugin>
-	      <plugin>
+<!-- 	      <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>3.4.1</version>
@@ -107,7 +107,7 @@
                     </goals>
                 </execution>
             </executions>
-        </plugin>
+        </plugin> -->
 		</plugins>
 		<resources>
 			<resource>
